[gd_scene load_steps=4 format=3 uid="uid://cv4gqurddx4k8"]

[ext_resource type="Script" path="res://camera_actions.gd" id="1"]
[ext_resource type="Script" path="res://action_menu.gd" id="2"]
[ext_resource type="Script" path="res://player_hand.gd" id="3"]

[node name="camera" type="Camera2D"]
script = ExtResource("1")

[node name="action_panel" type="CanvasLayer" parent="."]
layer = 2

[node name="left_button" type="Button" parent="action_panel"]
offset_left = 48.0
offset_top = 56.0
offset_right = 88.0
offset_bottom = 96.0
rotation = 1.5708
text = "V"

[node name="recenter_button" type="Button" parent="action_panel"]
offset_left = 56.0
offset_top = 56.0
offset_right = 96.0
offset_bottom = 96.0
text = "]["

[node name="down_button" type="Button" parent="action_panel"]
offset_left = 56.0
offset_top = 104.0
offset_right = 96.0
offset_bottom = 144.0
text = "V"

[node name="up_button" type="Button" parent="action_panel"]
offset_left = 56.0
offset_top = 8.0
offset_right = 96.0
offset_bottom = 48.0
rotation = 3.14159
pivot_offset = Vector2(20, 20)
text = "V"

[node name="right_button" type="Button" parent="action_panel"]
offset_left = 104.0
offset_top = 96.0
offset_right = 144.0
offset_bottom = 136.0
rotation = 4.71239
text = "V"

[node name="zoom_in" type="Button" parent="action_panel"]
offset_left = 104.0
offset_top = 8.0
offset_right = 144.0
offset_bottom = 48.0
pivot_offset = Vector2(20, 20)
text = "+"

[node name="zoom_out" type="Button" parent="action_panel"]
offset_left = 8.0
offset_top = 8.0
offset_right = 48.0
offset_bottom = 48.0
pivot_offset = Vector2(20, 20)
text = "-"

[node name="action_menu_button" type="Button" parent="action_panel"]
offset_left = 8.0
offset_top = 104.0
offset_right = 48.0
offset_bottom = 144.0
pivot_offset = Vector2(20, 20)
text = "..."

[node name="action_menu" type="PopupMenu" parent="action_panel/action_menu_button"]
script = ExtResource("2")

[node name="about_popup" type="Popup" parent="action_panel/action_menu_button/action_menu"]
exclusive = true

[node name="background" type="ColorRect" parent="action_panel/action_menu_button/action_menu/about_popup"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -192.0
offset_top = -160.0
offset_right = 192.0
offset_bottom = 160.0
color = Color(0.466667, 0.466667, 0.466667, 1)

[node name="about_label" type="Label" parent="action_panel/action_menu_button/action_menu/about_popup"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -176.0
offset_top = -136.0
offset_right = 176.0
offset_bottom = 136.0
text = "Testing"

[node name="close_about_window_button" type="Button" parent="action_panel/action_menu_button/action_menu/about_popup"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -20.0
offset_bottom = 24.0
text = "X"

[node name="deck_json_popup" type="Window" parent="action_panel/action_menu_button/action_menu"]
position = Vector2i(200, 200)
size = Vector2i(800, 510)
visible = false

[node name="json_text_edit" type="TextEdit" parent="action_panel/action_menu_button/action_menu/deck_json_popup"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 6.0
offset_right = -4.0
offset_bottom = -48.0

[node name="confirm_button" type="Button" parent="action_panel/action_menu_button/action_menu/deck_json_popup"]
offset_left = 617.0
offset_top = 470.0
offset_right = 697.0
offset_bottom = 490.0
text = "Confirm"

[node name="PreloadedDecksButton" type="MenuButton" parent="action_panel/action_menu_button/action_menu/deck_json_popup"]
offset_left = 12.0
offset_top = 470.0
offset_right = 135.0
offset_bottom = 490.0
text = "Pre-Loaded Decks"

[node name="LoadFileButton" type="Button" parent="action_panel/action_menu_button/action_menu/deck_json_popup"]
offset_left = 300.0
offset_top = 470.0
offset_right = 369.0
offset_bottom = 490.0
text = "Load File"

[node name="OpenDeckDialog" type="FileDialog" parent="action_panel/action_menu_button/action_menu/deck_json_popup"]
size = Vector2i(455, 162)
access = 2

[node name="show_hide_hand_button" type="Button" parent="action_panel"]
offset_left = -137.0
offset_right = -87.0
offset_bottom = 40.0
scale = Vector2(1.5, 1.5)
text = "Hide"

[node name="HandCountLabel" type="Label" parent="action_panel/show_hide_hand_button"]
unique_name_in_owner = true
layout_mode = 0
offset_top = -29.3333
offset_right = 48.0
offset_bottom = -3.33333
text = "0"

[node name="player_hand" type="CanvasLayer" parent="."]
visible = false
script = ExtResource("3")

[connection signal="pressed" from="action_panel/left_button" to="." method="_on_left_button_pressed"]
[connection signal="pressed" from="action_panel/recenter_button" to="." method="_on_recenter_button_pressed"]
[connection signal="pressed" from="action_panel/down_button" to="." method="_on_down_button_pressed"]
[connection signal="pressed" from="action_panel/up_button" to="." method="_on_up_button_pressed"]
[connection signal="pressed" from="action_panel/right_button" to="." method="_on_right_button_pressed"]
[connection signal="pressed" from="action_panel/zoom_in" to="." method="_on_zoom_in_pressed"]
[connection signal="pressed" from="action_panel/zoom_out" to="." method="_on_zoom_out_pressed"]
[connection signal="pressed" from="action_panel/action_menu_button" to="action_panel/action_menu_button/action_menu" method="_on_action_menu_button_pressed"]
[connection signal="index_pressed" from="action_panel/action_menu_button/action_menu" to="action_panel/action_menu_button/action_menu" method="_on_action_menu_index_pressed"]
[connection signal="pressed" from="action_panel/action_menu_button/action_menu/about_popup/close_about_window_button" to="." method="_on_close_about_window_button_pressed"]
[connection signal="pressed" from="action_panel/action_menu_button/action_menu/deck_json_popup/confirm_button" to="action_panel/action_menu_button/action_menu" method="_on_confirm_button_pressed"]
[connection signal="pressed" from="action_panel/action_menu_button/action_menu/deck_json_popup/LoadFileButton" to="." method="_on_LoadFileButton_pressed"]
[connection signal="file_selected" from="action_panel/action_menu_button/action_menu/deck_json_popup/OpenDeckDialog" to="." method="_on_OpenDeckDialog_file_selected"]
[connection signal="pressed" from="action_panel/show_hide_hand_button" to="." method="_on_show_hide_hand_button_pressed"]
[connection signal="child_entered_tree" from="player_hand" to="player_hand" method="_on_player_hand_child_entered_tree"]
[connection signal="child_exiting_tree" from="player_hand" to="player_hand" method="_on_player_hand_child_exiting_tree"]
